// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Pagination / Regular 1 page 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  width: 34px;
}

<nav
  aria-label="Pagination"
  role="navigation"
>
  <div
    className="c0 c1"
  >
    <button
      aria-label="Go to previous page"
      className="NormalizedButton__Button-ey7f5x-0 c2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c3"
      >
        <svg
          aria-hidden="true"
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(90 12 12)"
          />
        </svg>
      </span>
    </button>
    <ul
      className="c5 c6"
    >
      <li
        className="c7"
      >
        <button
          aria-disabled={true}
          aria-label="Current Page, page: 1"
          className="NormalizedButton__Button-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c8"
            >
              1
            </span>
          </span>
        </button>
      </li>
    </ul>
    <button
      aria-label="Go to next page"
      className="NormalizedButton__Button-ey7f5x-0 c2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c3"
      >
        <svg
          aria-hidden="true"
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(-90 12 12)"
          />
        </svg>
      </span>
    </button>
  </div>
</nav>
`;

exports[`Storyshots Molecules | Pagination / Regular 2 pages 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  width: 52px;
}

<nav
  aria-label="Pagination"
  role="navigation"
>
  <div
    className="c0 c1"
  >
    <button
      aria-label="Go to previous page"
      className="NormalizedButton__Button-ey7f5x-0 c2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c3"
      >
        <svg
          aria-hidden="true"
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(90 12 12)"
          />
        </svg>
      </span>
    </button>
    <ul
      className="c5 c6"
    >
      <li
        className="c7"
      >
        <button
          aria-disabled={true}
          aria-label="Current Page, page: 1"
          className="NormalizedButton__Button-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c8"
            >
              1
            </span>
          </span>
        </button>
      </li>
      <li
        className="c7"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 2"
          className="NormalizedButton__Button-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c9"
            >
              2
            </span>
          </span>
        </button>
      </li>
    </ul>
    <button
      aria-label="Go to next page"
      className="NormalizedButton__Button-ey7f5x-0 c2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c3"
      >
        <svg
          aria-hidden="true"
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(-90 12 12)"
          />
        </svg>
      </span>
    </button>
  </div>
</nav>
`;

exports[`Storyshots Molecules | Pagination / Regular 12 pages 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  width: 152px;
}

<nav
  aria-label="Pagination"
  role="navigation"
>
  <div
    className="c0 c1"
  >
    <button
      aria-label="Go to previous page"
      className="NormalizedButton__Button-ey7f5x-0 c2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c3"
      >
        <svg
          aria-hidden="true"
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(90 12 12)"
          />
        </svg>
      </span>
    </button>
    <ul
      className="c5 c6"
    >
      <li
        className="c7"
      >
        <button
          aria-disabled={true}
          aria-label="Current Page, page: 1"
          className="NormalizedButton__Button-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c8"
            >
              1
            </span>
          </span>
        </button>
      </li>
      <li
        className="c7"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 2"
          className="NormalizedButton__Button-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c9"
            >
              2
            </span>
          </span>
        </button>
      </li>
      <li
        className="c7"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 3"
          className="NormalizedButton__Button-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c9"
            >
              3
            </span>
          </span>
        </button>
      </li>
      <li
        className="c10"
      >
        <span
          className="c9"
        >
          ...
        </span>
      </li>
      <li
        className="c7"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 12"
          className="NormalizedButton__Button-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c9"
            >
              12
            </span>
          </span>
        </button>
      </li>
    </ul>
    <button
      aria-label="Go to next page"
      className="NormalizedButton__Button-ey7f5x-0 c2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c3"
      >
        <svg
          aria-hidden="true"
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(-90 12 12)"
          />
        </svg>
      </span>
    </button>
  </div>
</nav>
`;

exports[`Storyshots Molecules | Pagination / Regular 999 pages 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  width: 200px;
}

<nav
  aria-label="Pagination"
  role="navigation"
>
  <div
    className="c0 c1"
  >
    <button
      aria-label="Go to previous page"
      className="NormalizedButton__Button-ey7f5x-0 c2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c3"
      >
        <svg
          aria-hidden="true"
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(90 12 12)"
          />
        </svg>
      </span>
    </button>
    <ul
      className="c5 c6"
    >
      <li
        className="c7"
      >
        <button
          aria-disabled={true}
          aria-label="Current Page, page: 1"
          className="NormalizedButton__Button-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c8"
            >
              1
            </span>
          </span>
        </button>
      </li>
      <li
        className="c7"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 2"
          className="NormalizedButton__Button-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c9"
            >
              2
            </span>
          </span>
        </button>
      </li>
      <li
        className="c7"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 3"
          className="NormalizedButton__Button-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c9"
            >
              3
            </span>
          </span>
        </button>
      </li>
      <li
        className="c10"
      >
        <span
          className="c9"
        >
          ...
        </span>
      </li>
      <li
        className="c7"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 999"
          className="NormalizedButton__Button-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c9"
            >
              999
            </span>
          </span>
        </button>
      </li>
    </ul>
    <button
      aria-label="Go to next page"
      className="NormalizedButton__Button-ey7f5x-0 c2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c3"
      >
        <svg
          aria-hidden="true"
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(-90 12 12)"
          />
        </svg>
      </span>
    </button>
  </div>
</nav>
`;

exports[`Storyshots Molecules | Pagination / Regular Regular 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  width: 152px;
}

<nav
  aria-label="Pagination"
  role="navigation"
>
  <div
    className="c0 c1"
  >
    <button
      aria-label="Go to previous page"
      className="NormalizedButton__Button-ey7f5x-0 c2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c3"
      >
        <svg
          aria-hidden="true"
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(90 12 12)"
          />
        </svg>
      </span>
    </button>
    <ul
      className="c5 c6"
    >
      <li
        className="c7"
      >
        <button
          aria-disabled={true}
          aria-label="Current Page, page: 1"
          className="NormalizedButton__Button-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c8"
            >
              1
            </span>
          </span>
        </button>
      </li>
      <li
        className="c7"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 2"
          className="NormalizedButton__Button-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c9"
            >
              2
            </span>
          </span>
        </button>
      </li>
      <li
        className="c7"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 3"
          className="NormalizedButton__Button-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c9"
            >
              3
            </span>
          </span>
        </button>
      </li>
      <li
        className="c10"
      >
        <span
          className="c9"
        >
          ...
        </span>
      </li>
      <li
        className="c7"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 10"
          className="NormalizedButton__Button-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c9"
            >
              10
            </span>
          </span>
        </button>
      </li>
    </ul>
    <button
      aria-label="Go to next page"
      className="NormalizedButton__Button-ey7f5x-0 c2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c3"
      >
        <svg
          aria-hidden="true"
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(-90 12 12)"
          />
        </svg>
      </span>
    </button>
  </div>
</nav>
`;
